Delete vote on second click. Closes #64.
